# sentry-sdk-biometrics-android

./: LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
sdk/: build.gradle.kts
sdk/src/main/cpp/: CMakeLists.txt  libsdkmain.c  libsdkmain.h
sdk/src/main/java/com/sentrycard/sentry/sdk/: SentrySdk.kt  SentrySdkError.kt
sdk/src/main/java/com/sentrycard/sentry/sdk/apdu/: APDUCommand.kt  APDUResponseCode.kt  ErrorMessageHelper.kt
sdk/src/main/java/com/sentrycard/sentry/sdk/biometrics/: BiometricsApi.kt
sdk/src/main/java/com/sentrycard/sentry/sdk/configuration/: Constants.kt
sdk/src/main/java/com/sentrycard/sentry/sdk/models/: BiometricEnrollmentStatus.kt  FingerprintValidation.kt  NfcAction.kt  Security.kt  VersionInfo.kt
sdk/src/main/java/com/sentrycard/sentry/sdk/utils/: ByteUtils.kt
sdk/src/main/java/com/sentrycard/sentry/security/: NativeLib.kt
